BUG-7: fix forgotten followers (#8)
